Improve calculations and UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,46 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
 
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="10dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <Button
+                android:id="@+id/btnFromGps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get pos from GPS" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btnFromLocator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get pos from locator" />
+        </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </TableRow>
+
+    <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
             <TextView
                 android:id="@+id/lblLat"
                 android:layout_width="wrap_content"
@@ -130,6 +170,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
         <TextView
             android:id="@+id/lblSiderealangle"
             android:layout_width="wrap_content"
@@ -170,31 +219,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <Button
-            android:id="@+id/btnFromGps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Get pos from GPS" />
-
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/btnFromLocator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Get pos from locator" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="10dp" />
     </TableRow>
 
     <TableRow
